--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.11.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
